fix: modals visible on all screens

--- a/client/src/stylesheets/game/phases/trade/TradeOptions.scss
+++ b/client/src/stylesheets/game/phases/trade/TradeOptions.scss
@@ -40,6 +40,7 @@
         img {
           height: 4rem;
           width: 4rem;
+          max-height: 7vh;
         }
 
         .input {
